--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,17 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
+    <header>
+      <% if current_user %>
+        <%= image_tag current_user.image %>
+        <%= current_user.name %>さん
+        <%= link_to "ログアウト", log_out_path %>
+      <% else %>
+        ゲストさん
+        <%= button_to "Googleでログイン", "/auth/google_oauth2", data: { turbo: false } %>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
