--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="flex flex-col items-center justify-center">
+  <%= image_tag 'main_logo.png', class: 'w-72 mt-32 mb-14' %>
+  <div class="mb-14 text-primary font-bold leading-7">
+    <p>"いつか"やった家事を忘れずに</p>
+    <p>"いつか"やる家事を明確に</p>
+  </div>
+  <%= button_to "Log in", "/auth/google_oauth2", data: { turbo: false }, class: 'text-white bg-primary p-4 font-bold rounded' %>
+</div>
