--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+input[type='text'],
+input[type='number'] {
+  border: none;
+  border-bottom: 2px solid #333;
+}
