--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
       <%= image_tag 'header_logo.png' %>
       <%= link_to "ログアウト", log_out_path, class: 'text-white' %>
     </header>
-    <%= yield %>
+    <div class="py-8 px-4">
+      <%= yield %>
+    </div>
   </body>
 </html>
