--- a/app/views/repetitive_tasks/index.html.erb
+++ b/app/views/repetitive_tasks/index.html.erb
@@ -1,4 +1,5 @@
 <div class="space-y-4">
-  <%= render @repetitive_tasks %>
+  <%= render(RepetitiveTaskComponent.with_collection(@repetitive_tasks)) %>
 </div>
+
 <%= link_to '＋', new_repetitive_task_path, class: 'absolute right-8 bottom-8 text-white p-6 font-bold bg-red-500 rounded-full' %>
