--- a/app/views/repetitive_tasks/new.html.erb
+++ b/app/views/repetitive_tasks/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: @repetitive_task) do |form| %>
-  <div>
+  <div class="mb-4">
     <%= form.label 'タスク名' %>
     <%= form.text_field :name, maxlength: 30 %>
   </div>
