--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
   <body class="h-screen">
     <%= render(HeaderComponent.new) %>
-    <div class="py-8 px-4">
+    <div class="max-w-md mx-auto py-8 px-4">
       <%= yield %>
     </div>
   </body>
