--- a/app/components/header_component.html.erb
+++ b/app/components/header_component.html.erb
@@ -1,4 +1,6 @@
 <header class="flex h-12 p-3 bg-primary items-center justify-between">
-  <%= image_tag 'header_logo.png' %>
+  <%= link_to repetitive_tasks_path do %>
+    <%= image_tag 'header_logo.png' %>
+  <% end %>
   <%= link_to "ログアウト", log_out_path, class: 'text-white' %>
 </header>
