--- a/app/components/header_component.html.erb
+++ b/app/components/header_component.html.erb
@@ -1,6 +1,8 @@
-<header class="flex h-12 p-3 bg-primary items-center justify-between">
-  <%= link_to repetitive_tasks_path do %>
-    <%= image_tag 'header_logo.png' %>
-  <% end %>
-  <%= link_to "ログアウト", log_out_path, class: 'text-white' %>
+<header class="h-12 p-3 bg-primary">
+  <div class="flex items-center justify-between max-w-md mx-auto">
+    <%= link_to repetitive_tasks_path do %>
+      <%= image_tag 'header_logo.png', class: 'w-20' %>
+    <% end %>
+    <%= link_to "ログアウト", log_out_path, class: 'text-white' %>
+  </div>
 </header>
