--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,8 @@
  */
 
 input[type='text'],
-input[type='number'] {
+input[type='number'],
+input[type='date'] {
   border: none;
   border-bottom: 2px solid #333;
 }
