やったログで今日なら今日と表示

--- a/app/components/repetitive_task_log_component.html.erb
+++ b/app/components/repetitive_task_log_component.html.erb
@@ -1,4 +1,3 @@
 <li>
-    <%= @repetitive_task_log.date %>
-    (<%= @repetitive_task_log.how_many_days_ago %>日前)
+  <%= "#{date} (#{how_many_days_ago})"%>
 </li>
