--- a/app/components/task_card_component.html.erb
+++ b/app/components/task_card_component.html.erb
@@ -1,4 +1,5 @@
 <%= link_to edit_path,
+      data: { turbo_frame: '_top' },
       class: "
         block flex-1 p-3 rounded-md border border-solid
         #{should_do_today? ?
