--- a/app/views/repetitive_task_logs/create.turbo_stream.erb
+++ b/app/views/repetitive_task_logs/create.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.replace @repetitive_task do %>
-  <%= render DoneButtonComponent.new(repetitive_task: @repetitive_task) %>
+  <%= render RepetitiveTaskComponent.new(repetitive_task: @repetitive_task) %>
 <% end %>
