スタイルの修正
フォームのplaceholder追加
フォームのスタイル修正
新規追加ボタンを画面右下に固定
毎日ならevery dayと表示
戻る・削除ボタンをアイコン化

--- a/app/components/task_card_component.html.erb
+++ b/app/components/task_card_component.html.erb
@@ -8,7 +8,7 @@
       " do
 %>
   <div class="mb-1 text-xs">
-    every <%= interval_days_number %> <%= day_or_days %>
+    <%= every_interval_days %>
   </div>
 
   <h3 class="mb-2 text-xl font-bold">
