--- a/app/views/repetitive_tasks/edit.html.erb
+++ b/app/views/repetitive_tasks/edit.html.erb
@@ -1,35 +1,32 @@
 
-<div class="flex flex-row items-center justify-between mb-5">
-  <%= link_to '一覧へ戻る', repetitive_tasks_path, class: 'border rounded p-3' %>
-  <%= button_to '×', repetitive_task_path(@repetitive_task),
+<div class="flex flex-row items-center justify-between mb-8">
+  <%= link_to image_tag('icon_back'), repetitive_tasks_path %>
+  <%= button_to image_tag('icon_garbage'), repetitive_task_path(@repetitive_task),
         method: :delete,
-        form: { data: { turbo_confirm: "タスクを削除しますか？" } },
-        class: 'border text-red-500 rounded p-3'
+        form: { data: { turbo_confirm: "タスクを削除しますか？" } }
   %>
 </div>
 
-<div>
-  <%= form_with(model: @repetitive_task) do |form| %>
-    <p class="text-xs leading-none text-primary font-bold">(必須 / 20文字まで)</p>
-    <div class="mb-10">
-      <%= form.label 'タスク名', class: 'mr-2' %>
-      <%= form.text_field :name, maxlength: 20, required: true %>
-    </div>
+<%= form_with(model: @repetitive_task) do |form| %>
+  <p class="text-xs leading-none text-primary font-bold">(必須 / 20文字まで)</p>
+  <div class="flex items-center mb-10">
+    <%= form.label 'タスク名', class: 'mr-2' %>
+    <%= form.text_field :name, placeholder: '枕カバーの洗濯', maxlength: 20, required: true, class: 'flex-1' %>
+  </div>
 
-    <p class="text-xs leading-none text-primary font-bold">(必須 / 0〜999日まで)</p>
-    <div class="mb-10">
-      <%= form.label '間隔(日)', class: 'mr-2' %>
-      <%= form.number_field :interval_days, min: 1, max: 999, step: 1, required: true %>
-    </div>
+  <p class="text-xs leading-none text-primary font-bold">(必須 / 1〜999日まで)</p>
+  <div class="mb-10">
+    <%= form.label '間隔(日)', class: 'mr-2' %>
+    <%= form.number_field :interval_days, placeholder: '7', min: 1, max: 999, step: 1, required: true %>
+  </div>
 
-    <div class="flex flex-row-reverse">
-      <%= form.submit '保存する', class: 'border rounded p-4' %>
-    </div>
-  <% end %>
-</div>
+  <div class="flex flex-row-reverse">
+    <%= form.submit '保存する', class: 'border rounded p-4' %>
+  </div>
+<% end %>
 
-<section class="mt-6">
-  <h3 class="text-lg font-bold">やったログ</h3>
+<section class="mt-10">
+  <h3 class="mb-3 text-lg font-bold text-primary">やった！ログ</h3>
   <ul>
     <%= render(RepetitiveTaskLogComponent.with_collection(@repetitive_task.logs)) %>
   </ul>
