--- a/app/views/repetitive_tasks/index.html.erb
+++ b/app/views/repetitive_tasks/index.html.erb
@@ -2,5 +2,4 @@
   <%= render(RepetitiveTaskComponent.with_collection(@repetitive_tasks)) %>
 </div>
 
-<%= link_to image_tag('rounded_plus'), new_repetitive_task_path,
-      class: 'absolute right-8 bottom-8' %>
+<%= link_to image_tag('rounded_plus'), new_repetitive_task_path, class: 'fixed right-8 bottom-8' %>
