--- a/app/views/repetitive_tasks/new.html.erb
+++ b/app/views/repetitive_tasks/new.html.erb
@@ -1,18 +1,18 @@
-<div class="mb-5">
-  <%= link_to '一覧へ戻る', repetitive_tasks_path, class: 'border rounded p-3' %>
+<div class="mb-8">
+  <%= link_to image_tag('icon_back'), repetitive_tasks_path %>
 </div>
 
 <%= form_with(model: @repetitive_task) do |form| %>
   <p class="text-xs leading-none text-primary font-bold">(必須 / 20文字まで)</p>
-  <div class="mb-10">
+  <div class="flex items-center mb-10">
     <%= form.label 'タスク名', class: 'mr-2' %>
-    <%= form.text_field :name, maxlength: 20, required: true %>
+    <%= form.text_field :name, placeholder: '枕カバーの洗濯', maxlength: 20, required: true, class: 'flex-1' %>
   </div>
 
-  <p class="text-xs leading-none text-primary font-bold">(必須 / 0〜999日まで)</p>
+  <p class="text-xs leading-none text-primary font-bold">(必須 / 1〜999日まで)</p>
   <div class="mb-10">
     <%= form.label '間隔(日)', class: 'mr-2' %>
-    <%= form.number_field :interval_days, min: 1, max: 999, step: 1, required: true %>
+    <%= form.number_field :interval_days, placeholder: '7', min: 1, max: 999, step: 1, required: true %>
   </div>
 
   <p class="text-xs leading-none text-gray-500">(任意)</p>
