招待機能を作成
save

--- a/app/components/header_component.html.erb
+++ b/app/components/header_component.html.erb
@@ -3,6 +3,9 @@
     <%= link_to repetitive_tasks_path do %>
       <%= image_tag 'header_logo.png', class: 'w-20' %>
     <% end %>
-    <%= link_to "ログアウト", log_out_path, class: 'text-white' %>
+    <% if current_user %>
+      <%= link_to '共有', user_groups_path, class: 'text-white' %>
+      <%= link_to 'ログアウト', log_out_path, class: 'text-white' %>
+    <% end %>
   </div>
 </header>
