--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,9 @@
 input[type='text'],
 input[type='number'],
 input[type='date'] {
-  border: none;
-  border-bottom: 2px solid #333;
+  border-radius: 4px;
+}
+
+body {
+  color: #333;
 }
