User#able_to_destroy?のテスト追加&微修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
   <body>
     <%# TODO: flashを表示 %>
+    <%# TODO: 期限が来たらWebプッシュ通知ができると尚良い %>
     <%= render(HeaderComponent.new) %>
     <main class="max-w-md mx-auto pt-8 px-4 pb-24">
       <%= yield %>
