--- a/app/views/user_groups/index.html.erb
+++ b/app/views/user_groups/index.html.erb
@@ -9,6 +9,7 @@
           <%= button_to image_tag('icon_reload'), user_group_path(@user_group), method: :patch  %>
         </div>
       </div>
+      <p class="text-gray-400">招待したい人に、上記の招待コードとあなたのgmailアドレスを教えてあげてください。</p>
     </div>
   <% end %>
 
