--- a/app/components/repetitive_task_log_component.html.erb
+++ b/app/components/repetitive_task_log_component.html.erb
@@ -1,3 +1,7 @@
 <li>
-  <%= "#{date} (#{how_many_days_ago})"%>
+  <%= form_with(model: form_target) do |form| %>
+    <%= form.date_field :date, min:, max:, onchange: submit, style: 'border: none; width: 140px;' %>
+    <%= how_many_days_ago %>
+    <%= form.submit '', id: form_submit_id %>
+  <% end %>
 </li>
