--- a/app/views/repetitive_tasks/new.html.erb
+++ b/app/views/repetitive_tasks/new.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="flex flex-row-reverse">
-    <%= form.submit '保存する', class: 'border rounded p-4' %>
+    <%= form.submit '保存する', class: 'p-3 bg-primary text-white rounded' %>
   </div>
 <% end %>
