--- a/app/components/task_card_component.html.erb
+++ b/app/components/task_card_component.html.erb
@@ -25,7 +25,7 @@
 
     <div class="flex">
       <%= image_tag bell_icon, class: 'mr-4' %>
-      あと <%= days_until_next %>日
+      <%= days_until_next %>
     </div>
   </div>
 <% end %>
