--- a/app/views/user_groups/index.html.erb
+++ b/app/views/user_groups/index.html.erb
@@ -1,16 +1,10 @@
 <div>
-  <%= render(InvitationCodeComponent.new(current_user: @current_user, class_name: 'mb-6'))%>
+  <%= render(InvitationCodeComponent.new(class_name: 'mb-6'))%>
 
   <ul class="space-y-2">
     <h3 class="mb-2 text-primary text-lg font-bold">メンバー</h3>
     <%= render(UserComponent.with_collection(@users)) %>
   </ul>
 
-  <% if current_user.owner? %>
-    <%= button_to '退会', user_group_path(current_user.group),
-          method: :delete,
-          class: 'mt-20 text-red-600 border border-red-600 rounded p-1',
-          form: { data: { turbo_confirm: '注意！！オーナーであるあなたが退会すると、タスクを共有しているユーザー全員も退会します。登録したタスクのデータはすべて消え、復元できません。本当に退会しますか？' } }
-    %>
-  <% end %>
+  <%= render(WithdrawButtonComponent.new(class_name: 'mt-20'))%>
 </div>
