SubmitButtonコンポーネント作成

--- a/app/components/invitation_code_component.html.erb
+++ b/app/components/invitation_code_component.html.erb
@@ -1,5 +1,5 @@
 <div class="<%= @class_name %>">
-  <p class="text-primary font-bold">招待コード</p>
+  <p class="mb-2 text-primary font-bold">招待コード</p>
   <div class="flex justify-between p-3 border rounded">
     <%= invitation_code %>
     <div class="flex items-center">
