--- a/app/components/header_component.html.erb
+++ b/app/components/header_component.html.erb
@@ -2,6 +2,6 @@
   <div class="flex items-center justify-between">
     <%= link_to image_tag('header_logo.png'), repetitive_tasks_path, class: 'w-20' %>
 
-    <%= render(HeaderMenuComponent.new) %>
+    <%= render(HeaderMenuComponent.new(current_user:)) %>
   </div>
 </header>
