コンポーネントのメソッドのうち、可能なものをインスタンス変数に置き換えることで行数削減

--- a/app/components/done_button_component.html.erb
+++ b/app/components/done_button_component.html.erb
@@ -1,5 +1,5 @@
 <%=
   button_to image_tag(done_button_image), done_or_undone_path,
     class: "mr-2",
-    method: http_method
+    method: post_or_delete
 %>
