--- a/app/components/repetitive_task_log_component.html.erb
+++ b/app/components/repetitive_task_log_component.html.erb
@@ -1,13 +1,13 @@
 <li>
-  <%= form_with(model: form_target) do |form| %>
+  <%= form_with(model: @form_target) do |form| %>
     <%= form.date_field :date,
           min: next_date_of_previous_log,
           max: previous_date_of_next_log,
-          onchange: submit,
+          onchange: @submit,
           required: true,
           style: 'border: none; width: 150px;'
     %>
     <%= how_many_days_ago %>
-    <%= form.submit '', id: form_submit_id %>
+    <%= form.submit '', id: @form_submit_id %>
   <% end %>
 </li>
