--- a/app/components/user_component.html.erb
+++ b/app/components/user_component.html.erb
@@ -1,6 +1,6 @@
 <li class="flex">
   <span class="mr-8">
-    <%= user_name %> <%= label %>
+    <%= @user_name %> <%= label %>
   </span>
   <% if can_leave_group? %>
     <%= button_to image_tag('icon_leave_group'), user_path(current_user),
@@ -10,7 +10,7 @@
   <% elsif can_remove_target_user? %>
     <%= button_to image_tag('icon_delete_user'), user_path(@user),
           method: :delete,
-          form: { data: { turbo_confirm: "#{user_name}さんとの共有を解除しますか？"} }
+          form: { data: { turbo_confirm: "#{@user_name}さんとの共有を解除しますか？"} }
     %>
   <% end %>
 </li>
