--- a/app/components/user_create_form_section_component.html.erb
+++ b/app/components/user_create_form_section_component.html.erb
@@ -1,14 +1,14 @@
 <section class="<%= @class_name %>">
   <h3 class="flex items-center mb-3 text-primary font-bold">
-    <%= image_tag icon_name, class: 'mr-2' %>
-    <%= heading %>
+    <%= image_tag @icon_name, class: 'mr-2' %>
+    <%= @heading %>
   </h3>
 
   <%= form_with url: users_path do |form| %>
     <%= form.hidden_field :name, value: @name %>
     <%= form.hidden_field :email, value: @email %>
 
-    <% if @by_invitation %>
+    <% if by_invitation? %>
       <div class="flex flex-col mb-3">
         <%= form.label '招待してくれた人のGmailアドレス', class: 'mb-2' %>
         <%= form.email_field :inviter_email, class: 'rounded' %>
@@ -21,7 +21,7 @@
     <% end %>
 
     <div class="flex flex-row-reverse">
-      <%= render(SubmitButtonComponent.new(form:, label: submit_label)) %>
+      <%= render(SubmitButtonComponent.new(form:, label: @submit_label)) %>
     </div>
   <% end %>
 </section>
