--- a/app/components/header_component.html.erb
+++ b/app/components/header_component.html.erb
@@ -1,6 +1,6 @@
 <header class="p-3 bg-primary">
-  <div class="flex items-center justify-between">
-    <%= link_to image_tag('header_logo.png'), repetitive_tasks_path, class: 'w-20 mr-4' %>
+  <div class="flex items-center justify-between gap-1">
+    <%= link_to image_tag('header_logo.png'), repetitive_tasks_path, class: 'w-20' %>
 
     <% if current_user %>
       <% if current_page?(repetitive_tasks_path) %>
