--- a/app/components/search_form_component.html.erb
+++ b/app/components/search_form_component.html.erb
@@ -1,8 +1,8 @@
 <%= form_with url: search_path do |form| %>
   <%= form.text_field :name,
-        class: 'p-1',
+        class: 'p-0',
         placeholder: 'タスク名で絞り込み',
-        style: 'border: none',
+        style: 'font-size: 12px; border: none; padding: 0 4px; margin: 0 8px;',
         id: 'search-input',
         onblur: @submit
   %>
