--- a/app/components/task_card_component.html.erb
+++ b/app/components/task_card_component.html.erb
@@ -18,7 +18,7 @@
   <div class="px-10">
     <% if done_at_least_once? %>
       <div class="flex">
-        <%= image_tag @calendar_check_icon, class: 'mr-4' %>
+        <%= image_tag @calendar_icon, class: 'mr-4' %>
         前回 <%= last_done_at %>
       </div>
     <% end %>
