未読のアクティビティログを目立たせる
未読のアクティビティログを目立たせる

--- a/app/components/activity_log_component.html.erb
+++ b/app/components/activity_log_component.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="p-2 <%= if highlighted? then 'bg-yellow-50' end %>">
   <div class="text-sm"><%= @activity_log_text %></div>
   <div class="text-xs text-gray-500"><%= @activity_log_datetime %></div>
 </li>
