--- a/app/views/activity_logs/index.html.erb
+++ b/app/views/activity_logs/index.html.erb
@@ -4,6 +4,6 @@
 </h1>
 
 <ul class="space-y-6 py-3">
-  <%= render(ActivityLogComponent.with_collection(@activity_logs)) %>
+  <%= render(ActivityLogComponent.with_collection(@activity_logs, current_user:)) %>
 </ul>
 
