特定のやったログの日付が変更できない問題を修正

--- a/app/components/done_button_component.html.erb
+++ b/app/components/done_button_component.html.erb
@@ -1,5 +1,6 @@
 <%=
   button_to image_tag(done_button_image), done_or_undone_path,
+    id: 'done-button',
     class: "mr-2",
     method: post_or_delete
 %>
