--- a/app/views/repetitive_tasks/index.html.erb
+++ b/app/views/repetitive_tasks/index.html.erb
@@ -2,4 +2,4 @@
   <%= render(RepetitiveTaskListComponent.new(repetitive_tasks: @repetitive_tasks)) %>
 <% end %>
 
-<%= link_to image_tag('rounded_plus'), new_repetitive_task_path, class: 'fixed right-8 bottom-8' %>
+<%= link_to image_tag('rounded_plus'), new_repetitive_task_path, class: 'fixed right-8 bottom-8', id: 'create-task' %>
