--- a/app/views/repetitive_tasks/new.html.erb
+++ b/app/views/repetitive_tasks/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mb-8 w-fit">
-  <%= link_to image_tag('icon_back'), repetitive_tasks_path %>
+  <%= link_to image_tag('icon_back'), repetitive_tasks_path, id: 'back-link' %>
 </div>
 
 <%= render(RepetitiveTaskFormComponent.new(repetitive_task: @repetitive_task)) %>
