--- a/app/components/header_menu_component.html.erb
+++ b/app/components/header_menu_component.html.erb
@@ -8,6 +8,7 @@
     x-show="isMenuOpen"
     @click.outside="isMenuOpen = false"
   >
+    <li><%= link_to 'アカウント設定', account_settings_path, class: 'block p-3 text-white' %></li>
     <li><%= link_to '招待・共有設定', user_groups_path, class: 'block p-3 text-white' %></li>
     <li><%= link_to 'ログアウト', log_out_path, class: 'block p-3 text-white' %></li>
   </ul>
