--- a/app/components/search_form_component.html.erb
+++ b/app/components/search_form_component.html.erb
@@ -1,6 +1,6 @@
 <%= form_with url: search_path do |form| %>
   <%= form.text_field :name,
-        class: 'p-0',
+        class: 'p-0 w-32',
         placeholder: 'タスク名で絞り込み',
         style: 'font-size: 12px; border: none; padding: 0 4px; margin: 0 8px;',
         id: 'search-input',
