--- a/app/components/search_form_component.html.erb
+++ b/app/components/search_form_component.html.erb
@@ -1,8 +1,7 @@
 <%= form_with url: search_path do |form| %>
   <%= form.text_field :name,
-        class: 'p-0 w-32',
+        class: 'text-xs border-none w-11/12',
         placeholder: 'タスク名で絞り込み',
-        style: 'font-size: 12px; border: none; padding: 0 4px; margin: 0 8px;',
         id: 'search-input',
         onblur: 'searchSubmit()'
   %>
